Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-10-10 Takashi
 BUG: [ 1573240 ] Crash in subversion trunk
  Src: MainFrm.cpp MainFrm.h OptionsInit.cpp

2006-10-09 Takashi
 BUG: [ 1570259 ] Bookmarks GUI get reset after save
  Src/editlib: ccrystaltextview.cpp

2006-10-08 Takashi
 BUG: [ 1570173 ] Crash when merging all differences
  Src: MergeDoc.cpp

2006-10-08 Kimmo
 PATCH: [ 1555344 ] Separate active/inactive developers in Contributors.txt
  Docs/Users: Contributors.txt

2006-10-07 Tim
 PATCH: [ 1572359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-04 Tim
 PATCH: [ 1570241 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-02 Gal
 BUG: [ 1566783 ] Crash on Save Project when no file is selected
  Src: MainFrm.cpp

2006-10-01 Kimmo
 PATCH: [ 1567874 ] Change manual URL to point to 2.6 manual
  Src: MainFrm.cpp

2006-09-27 Takashi
 BUG: [ 1564572 ] Leak memory on undoing
  Src: GhostTextBuffer.h
  Src/editlib: ccrystaltextbuffer.h

2006-09-27 Kimmo
 PATCH: [ 1565917 ] Register.bat to register ShellExt for 64-bit Windows
  ShellExtension: Register.bat
 BUG: [ 1563187 ] Can't close a file compare with -e switch
  Src: MergeDoc.cpp

2006-09-26 Tim
 PATCH: [ 1565359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-09-26 Kimmo
 PATCH: [ 1564857 ] FindAnyFile function doesn't compile with VC6
  Src/Common: coretools.cpp

2006-09-25 Kimmo
 PATCH: [ 1563171 ] Catalan translation update (Open-dialog)
  Submitted by Jordi Vilar
   Src/Languages/Catalan: MergeCatalan.rc

2006-09-24 Gal
 BUG: [ 1564283 ] Parameter -x causes files to be closed after merging
  Src: MergeDoc.cpp

2006-09-24 Kimmo
 PATCH: [ 1564280 ] Stack corruption in LanguageSelect
  Src/Common: LanguageSelect.cpp

2006-09-23 Kimmo
 Couple of type fixes to CMoveConstraint